crates/general/fixtures/invalid/duplicate_names.zt
x := 1
x := 2

{ a = 1; a = 2; }

outer := { inner = 1; inner = 2; }

y := { p = { q = 1; q = 2; }; }

x
